[tool.poetry]
name = "cult-project-bot"
version = "0.1.0"
description = "A Telegram bot with payment integration for courses"
authors = ["Stanislav Diadechko <stasdyad@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.0"
sqlalchemy = "^2.0"
asyncpg = "^0.28.0"
psycopg2-binary  = "2.9.10"
alembic = "^1.11.2"
stripe = "^6.0.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.poetry.scripts]
bot = "app.bot:main"
